--- a/index.html
+++ b/index.html
@@ -2,42 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Alvi Arman Chowdhury | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>John Doe</h1>
-    <p>Web Developer | Designer | Tech Enthusiast</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <div class="container">
+      <h1>Alvi Arman Chowdhury</h1>
+      <p>BSc in CSE | Android App Developer | UI/UX Designer | DB Expert | Game Developer</p>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <section id="about">
+  <section id="about" class="container">
     <h2>About Me</h2>
-    <p>Hello! I'm John, a passionate web developer focused on building responsive websites and user-friendly applications.</p>
+    <p>I am a passionate developer with a strong foundation in computer science, specialized in building powerful Android applications, crafting beautiful UI/UX designs, managing efficient databases, and developing interactive games. My mission is to create impactful digital solutions.</p>
   </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>Project A</strong> – A weather app using JavaScript</li>
-      <li><strong>Project B</strong> – Personal blog built with HTML/CSS</li>
+  <section id="skills" class="container">
+    <h2>Skills</h2>
+    <ul class="skills">
+      <li>Android App Development (Java/Kotlin)</li>
+      <li>UI/UX Design (Figma, Adobe XD)</li>
+      <li>Database Management (MySQL, Firebase)</li>
+      <li>Game Development (Unity, C#)</li>
+      <li>Web Technologies (HTML, CSS, JS)</li>
+      <li>Version Control (Git, GitHub)</li>
     </ul>
   </section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: johndoe@example.com</p>
-    <p>GitHub: <a href="https://github.com/yourusername">yourusername</a></p>
+  <section id="projects" class="container">
+    <h2>Featured Projects</h2>
+    <div class="project">
+      <h3>Smart Health Tracker App</h3>
+      <p>An Android app that tracks health data and syncs with Firebase in real-time.</p>
+    </div>
+    <div class="project">
+      <h3>2D Puzzle Game</h3>
+      <p>Fun and challenging game developed using Unity and C# with smooth physics and sound.</p>
+    </div>
+    <div class="project">
+      <h3>Personal Finance Manager</h3>
+      <p>Secure app with intuitive UI to manage expenses and budgets using SQLite.</p>
+    </div>
+  </section>
+
+  <section id="contact" class="container">
+    <h2>Contact</h2>
+    <p>Email: alviarman@example.com</p>
+    <p>GitHub: <a href="https://github.com/alviarman" target="_blank">alviarman</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/alviarman" target="_blank">linkedin.com/in/alviarman</a></p>
   </section>
 
   <footer>
-    <p>&copy; 2025 John Doe</p>
+    <div class="container">
+      <p>&copy; 2025 Alvi Arman Chowdhury. All rights reserved.</p>
+    </div>
   </footer>
 </body>
 </html>
