--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <div class="container">
       <h1>Alvi Arman Chowdhury</h1>
-      <p>BSc in CSE | Android App Developer | UI/UX Designer | DB Expert | Game Developer</p>
+      <p>BSc in CSE <br> Android App Developer | UI Designer |  Game Developer</p>
       <nav>
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
@@ -28,10 +28,9 @@
   <section id="skills" class="container">
     <h2>Skills</h2>
     <ul class="skills">
-      <li>Android App Development (Java/Kotlin)</li>
-      <li>UI/UX Design (Figma, Adobe XD)</li>
-      <li>Database Management (MySQL, Firebase)</li>
-      <li>Game Development (Unity, C#)</li>
+      <li>Android App Development (Java)</li>
+      <li>Database Management (Firebase)</li>
+      <li>Game Development (Java)</li>
       <li>Web Technologies (HTML, CSS, JS)</li>
       <li>Version Control (Git, GitHub)</li>
     </ul>
@@ -40,24 +39,24 @@
   <section id="projects" class="container">
     <h2>Featured Projects</h2>
     <div class="project">
-      <h3>Smart Health Tracker App</h3>
-      <p>An Android app that tracks health data and syncs with Firebase in real-time.</p>
+      <h3>Find Shortest Path</h3>
+      <p>An Android app that tracks the shortest path among cities.</p>
     </div>
     <div class="project">
       <h3>2D Puzzle Game</h3>
-      <p>Fun and challenging game developed using Unity and C# with smooth physics and sound.</p>
+      <p>Fun and challenging game developed using Canva in java.</p>
     </div>
     <div class="project">
-      <h3>Personal Finance Manager</h3>
-      <p>Secure app with intuitive UI to manage expenses and budgets using SQLite.</p>
+      <h3>AI Assistant App</h3>
+      <p>App that helps user via voice command with the help of google Assistant API.</p>
     </div>
   </section>
 
   <section id="contact" class="container">
     <h2>Contact</h2>
-    <p>Email: alviarman@example.com</p>
-    <p>GitHub: <a href="https://github.com/alviarman" target="_blank">alviarman</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/alviarman" target="_blank">linkedin.com/in/alviarman</a></p>
+    <p>Email: alviarman@gmail.com</p>
+    <p>GitHub: <a href="" target="_blank">alviarman</a></p>
+    <p>LinkedIn: <a href="" target="_blank">linkedin.com/in/alviarman</a></p>
   </section>
 
   <footer>
