--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2 class="about-title">About Me</h2>
-                    <p>I am a passionate software developer with expertise in web development and software engineering. My journey in technology has equipped me with a diverse skill set and a deep understanding of modern development practices.</p>
+                    <p>I am a passionate software developer with expertise in web development and game development. My journey in technology has equipped me with a diverse skill set and a deep understanding of modern development practices.</p>
                     <p>I love creating innovative solutions and am constantly learning new technologies to enhance my development capabilities.</p>
                 </div>
                 <div class="about-image">
@@ -95,8 +95,8 @@
                     <h3>Graph Traversal App</h3>
                     <p>A visualization tool for graph traversal algorithms, demonstrating various path-finding techniques and their implementations.</p>
                     <div class="project-links">
-                        <a href="#" class="btn">View Project</a>
-                        <a href="#" class="btn">Source Code</a>
+                        <a href=" " class="btn">View Project</a>
+                        <a href=" " class="btn">Source Code</a>
                     </div>
                 </div>
                 <!-- Add more project cards as needed -->
@@ -112,28 +112,26 @@
                 <div class="skill-category">
                     <h3>Frontend</h3>
                     <ul>
-                        <li>HTML5</li>
-                        <li>CSS3</li>
-                        <li>JavaScript</li>
-                        <li>React</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>XML Design</li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h3>Backend</h3>
                     <ul>
-                        <li>Node.js</li>
-                        <li>Python</li>
+                        <li>C</li>
                         <li>Java</li>
-                        <li>MySQL</li>
+                        <li>JavaScript</li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h3>Tools & Others</h3>
                     <ul>
                         <li>Git</li>
-                        <li>Docker</li>
+                        <li>MySQL</li>
                         <li>MongoDB</li>
-                        <li>AWS</li>
+                        <li>Android Studio</li>
                     </ul>
                 </div>
             </div>
