--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <h1 data-content="A">
                 ALVI
             </h1>
+            <h2 class="developer-title">Software Developer</h2>
             <div class="model"></div>
         </div>
     </div>
@@ -74,7 +75,7 @@
                     <p>I love creating innovative solutions and am constantly learning new technologies to enhance my development capabilities.</p>
                 </div>
                 <div class="about-image">
-                    <img src="images/alvi.jpeg" alt="Alvi Arman">
+                    <img src="images/alvia.jpeg" alt="Alvi Arman">
                 </div>
             </div>
         </div>
@@ -86,20 +87,29 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <div class="video-container">
-                        <video controls>
-                            <source src="videos/graphv.mov" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                    <h3>Chess Master 2D</h3>
+                    <div class="project-images">
+                        <img src="projects/chess.png" alt="Chess Master 2D Screenshot 1">
+                        <img src="projects/designboard.png" alt="Chess Master 2D Screenshot 2">
                     </div>
-                    <h3>Graph Traversal App</h3>
-                    <p>A visualization tool for graph traversal algorithms, demonstrating various path-finding techniques and their implementations.</p>
+                    <p>A 2D chess game implementation featuring classic chess rules and an intuitive user interface. Players can enjoy the timeless game of chess with a modern design.</p>
                     <div class="project-links">
-                        <a href=" " class="btn">View Project</a>
-                        <a href=" " class="btn">Source Code</a>
+                        <a href="#" class="btn">View Project</a>
+                        <a href="#" class="btn">Source Code</a>
                     </div>
                 </div>
-                <!-- Add more project cards as needed -->
+                <div class="project-card">
+                    <h3>Graph Traversal App</h3>
+                    <div class="project-images">
+                        <img src="projects/gg.png" alt="Graph Project Screenshot 1">
+                        <img src="projects/graphtwo.png" alt="Graph Project Screenshot 2">
+                    </div>
+                    <p>A visualization tool for graph traversal algorithms, demonstrating various path-finding techniques and their implementations.</p>
+                    <div class="project-links">
+                        <a href="#" class="btn">View Project</a>
+                        <a href="#" class="btn">Source Code</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -114,15 +124,15 @@
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>XML Design</li>
+                        <li>XML</li>
                     </ul>
                 </div>
                 <div class="skill-category">
                     <h3>Backend</h3>
                     <ul>
-                        <li>C</li>
-                        <li>Java</li>
                         <li>JavaScript</li>
+                        <li>C & C++</li>
+                        <li>Java</li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -144,15 +154,32 @@
             <h2 class="section-title">Blog</h2>
             <div class="blog-grid">
                 <article class="blog-card">
-                    <img src="images/blog1.jpg" alt="Blog Post 1">
+                    <img src="projects/chess.png" alt="Chess Master 2D">
                     <div class="blog-content">
-                        <h3>Blog Post Title</h3>
-                        <p class="blog-date">March 15, 2024</p>
-                        <p class="blog-excerpt">A brief description of the blog post content...</p>
+                        <h3>Building Chess Master 2D: A Journey in Game Development</h3>
+                        <p class="blog-date">March 20, 2024</p>
+                        <p class="blog-excerpt">Exploring the challenges and solutions in developing a 2D chess game, from implementing chess rules to creating an intuitive user interface. Learn about the technical decisions and design patterns used in this project.</p>
                         <a href="#" class="btn">Read More</a>
                     </div>
                 </article>
-                <!-- Add more blog cards as needed -->
+                <article class="blog-card">
+                    <img src="projects/graphblog.png" alt="Graph Traversal App">
+                    <div class="blog-content">
+                        <h3>Visualizing Graph Algorithms: A Deep Dive</h3>
+                        <p class="blog-date">March 15, 2024</p>
+                        <p class="blog-excerpt">A comprehensive guide to implementing and visualizing graph traversal algorithms. Discover how to make complex algorithms more accessible through interactive visualizations.</p>
+                        <a href="#" class="btn">Read More</a>
+                    </div>
+                </article>
+                <article class="blog-card">
+                    <img src="images/javascript.png" alt="Web Development">
+                    <div class="blog-content">
+                        <h3>Modern Web Development: Best Practices and Tools</h3>
+                        <p class="blog-date">March 10, 2024</p>
+                        <p class="blog-excerpt">An overview of essential tools and best practices in modern web development. From responsive design to performance optimization, learn how to create better web applications.</p>
+                        <a href="#" class="btn">Read More</a>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
@@ -177,15 +204,15 @@
                 <div class="contact-info">
                     <div class="info-item">
                         <i class="fas fa-envelope"></i>
-                        <p>email@example.com</p>
+                        <p>alviarman785@gmail.com</p>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-phone"></i>
-                        <p>+1 234 567 890</p>
+                        <p>xxxxxxxxxxx</p>
                     </div>
                     <div class="info-item">
                         <i class="fas fa-map-marker-alt"></i>
-                        <p>Your Location</p>
+                        <p>Dhaka, Bangladesh</p>
                     </div>
                 </div>
             </div>
@@ -211,3 +238,4 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </body>
 </html>
+
